@@ -64,6 +64,9 @@ $cmd = ($row['active'] == 1 ? 'deactivate' : 'activate'); ?>
 </p>
 </form>
 
+if ( IS_ADMIN ) :
+<p><a href="delete.php?table=judgehost&amp;hostname=<?=$id?>">delete this judgehost</a></p>
+
 <h3>Judgings by <?=printhost($row['hostname'])?></h3>
 <?php
 
