@@ -53,6 +53,7 @@ Version 2.0.0 - SVN
    admins will be allowed to change more of the core data.
  - Bring lib.database.php up to date with latest upstream version.
  - Add Referential Integrity check to configchecker.
+ - Add option to admin interface to delete data.
 
 Version 1.3.0 - 6 October 2006
 ------------------------------
